// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a page with next and previous links correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 2em;
  padding-bottom: 2.5em;
  display: table;
  width: 100%;
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  display: table-cell;
  vertical-align: middle;
  line-height: 28px;
  text-align: right;
}

.emotion-2 {
  display: table-cell;
  vertical-align: middle;
  line-height: 28px;
  text-align: left;
}

.emotion-3 {
  display: inline-block;
  width: 270px;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      ←  
    </span>
    <a
      class="emotion-2"
      href="/drivers/csharp/"
      title="Previous Section"
    >
      <span
        class="emotion-3"
      >
        MongoDB C#/.NET Driver
      </span>
    </a>
    <a
      class="emotion-1"
      href="/drivers/java/"
      title="Next Section"
    >
      <span
        class="emotion-3"
      >
        Java MongoDB Driver
      </span>
    </a>
    <span
      class="emotion-2"
    >
       →
    </span>
  </div>
</DocumentFragment>
`;

exports[`renders a page with no next link correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 2em;
  padding-bottom: 2.5em;
  display: table;
  width: 100%;
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  display: table-cell;
  vertical-align: middle;
  line-height: 28px;
  text-align: right;
}

.emotion-2 {
  display: table-cell;
  vertical-align: middle;
  line-height: 28px;
  text-align: left;
}

.emotion-3 {
  display: inline-block;
  width: 270px;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      ←  
    </span>
    <a
      class="emotion-2"
      href="/drivers/go/"
      title="Previous Section"
    >
      <span
        class="emotion-3"
      >
        MongoDB Go Driver
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`renders a page with no previous link correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding-top: 2em;
  padding-bottom: 2.5em;
  display: table;
  width: 100%;
}

@media print {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  display: table-cell;
  vertical-align: middle;
  line-height: 28px;
  text-align: right;
}

.emotion-2 {
  display: inline-block;
  width: 270px;
}

.emotion-3 {
  display: table-cell;
  vertical-align: middle;
  line-height: 28px;
  text-align: left;
}

<div
    class="emotion-0"
  >
    <a
      class="emotion-1"
      href="/drivers/go/"
      title="Next Section"
    >
      <span
        class="emotion-2"
      >
        MongoDB Go Driver
      </span>
    </a>
    <span
      class="emotion-3"
    >
       →
    </span>
  </div>
</DocumentFragment>
`;
